tests/baselines/reference/heterogeneousArrayAndOverloads.errors.txt
tests/cases/compiler/heterogeneousArrayAndOverloads.ts(9,19): error TS2345: Argument of type '[1, 2, "hi", 5]' is not assignable to parameter of type 'string[]'.
  Types of property 'push' are incompatible.
    Type '(...items: (1 | 2 | 5 | "hi")[]) => number' is not assignable to type '(...items: string[]) => number'.
      Types of parameters 'items' and 'items' are incompatible.
        Type 'string' is not assignable to type '1 | 2 | 5 | "hi"'.


==== tests/cases/compiler/heterogeneousArrayAndOverloads.ts (1 errors) ====
    class arrTest {
        test(arg1: number[]);
        test(arg1: string[]);
        test(arg1: any[]) { }
        callTest() {
            this.test([1, 2, 3, 5]);
            this.test(["hi"]);
            this.test([]);
            this.test([1, 2, "hi", 5]); // Error
                      ~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '[1, 2, "hi", 5]' is not assignable to parameter of type 'string[]'.
!!! error TS2345:   Types of property 'push' are incompatible.
!!! error TS2345:     Type '(...items: (1 | 2 | 5 | "hi")[]) => number' is not assignable to type '(...items: string[]) => number'.
!!! error TS2345:       Types of parameters 'items' and 'items' are incompatible.
!!! error TS2345:         Type 'string' is not assignable to type '1 | 2 | 5 | "hi"'.
        }
    }